--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: android
 android:
   components:
-    - build-tools-19.0.2
+    - build-tools-19.1.0
+    - extra-android-support
+    - extra-android-m2repository
     - android-19
   licenses:
-    - android-sdk-license-5be876d5
+    - '.+'
 script: "./gradlew build"
